# mpy-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
.progress/: PROGRESS.md
assets/: default-config.toml  runtime.db
docs/: deployment.md  developer-guide.md  user-guide.md
docs/plans/: 2026-03-03-interactive-config-design.md  2026-03-03-interactive-config-implementation.md  2026-03-03-mpy-cli-design.md  2026-03-03-mpy-cli-implementation.md  2026-03-03-opencode-skills-red-evidence.md  2026-03-03-opencode-skills.md  2026-03-03-port-scan-design.md  2026-03-03-port-scan-implementation.md  2026-03-04-manual-upload-design.md  2026-03-04-manual-upload-implementation.md  2026-03-05-run-command-design.md  2026-03-05-run-command-implementation.md  2026-03-06-delete-command-design.md  2026-03-06-delete-command-implementation.md  2026-03-06-source-dir-root-mapping-design.md  2026-03-06-source-dir-root-mapping-implementation.md  2026-03-06-tree-command-design.md  2026-03-06-tree-command-implementation.md  2026-03-09-list-performance-design.md  2026-03-09-list-performance-implementation.md  2026-03-11-cli-short-options-design.md  (+6 more)
mpy_cli/: __init__.py  __main__.py  cli.py  config.py  config_wizard.py  executor.py  gitdiff.py  ignore.py  logging.py  planner.py  runtime.py  scanner.py
scripts/: build_release.py
tests/: test_bootstrap.py  test_cli.py  test_config.py  test_config_wizard.py  test_docs_and_ci.py  test_executor.py  test_gitdiff.py  test_ignore.py  test_mpremote_backend.py  test_planner.py  test_runtime.py  test_scanner.py
(+16 files in other folders)
